# caesium-image-compressor

./: .clang-format  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  AUTHORS  CHANGELOG.md  CMakeLists.txt  Caesium.pro  Cargo.toml  Cs-133.pro  Info.plist  LICENSE.md  README.md  SECURITY_FIXES.md  TODO.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  caesium-image-compressor.pro  caesium.cpp  caesium.h  caesium.ui  caesium_zh_TW.ts  cimageinfo.cpp  cimageinfo.h  clist.cpp  clist.h  ctreewidgetitem.h  deploy.bat  deploy.py  deploy.sh  eslint.config.mjs  exif.cpp  exif.h  icons.qrc  index.html  jpeg.cpp  jpeg.h  (+25 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other-issues.md
.github/workflows/: build-qt.yml
Caesium/: caesium.cpp  caesium.h  caesium.ui  main.cpp
api/: Cargo.toml  tauri.conf.json
api/capabilities/: default.json
api/icons/: icon.icns
api/src/: compressor.rs  lib.rs  main.rs  scan_files.rs
api/src/commands/: compression.rs  mod.rs  post_compression_actions.rs
caesium/: Caesium.pro  caesium.pro  icons.qrc
caesium/resources/: icons.qrc
caesium/src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  caesium.cpp  caesium.h  caesium.ui  cimage.cpp  cimage.h  clist.h  ctreewidgetitem.cpp  ctreewidgetitem.h  exif.cpp  exif.h  jpeg.cpp  main.cpp  png.h  preferencedialog.cpp  preferencedialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  qdroptreewidget.cpp  qdroptreewidget.h  utils.cpp  utils.h
caesium/translations/: caesium_en_US.ts  caesium_fr_FR.ts
icons/icons/: icon.icns
locale/: en_US.ts
qss/: style_linux.qss  style_osx.qss  style_win.qss
resources/: icons.rc  languages.qrc  resources.qrc  style.manifest
resources/i18n/: caesium_ar_EG.ts  caesium_de_DE.ts  caesium_el_GR.ts  caesium_en_US.ts  caesium_es_ES.ts  caesium_fa_IR.ts  caesium_fi_FI.ts  caesium_fr_FR.ts  caesium_hi_IN.ts  caesium_hi_IN.xml  caesium_id_ID.ts  caesium_it_IT.qm  caesium_it_IT.ts  caesium_ja_JP.ts  caesium_ko_KR.ts  caesium_pl_PL.ts  caesium_pt_BR.ts  caesium_ro_RO.ts  caesium_ru_RU.ts  caesium_sk_SK.ts  caesium_tr_TR.ts  caesium_zh_CN.qm  caesium_zh_CN.ts  caesium_zh_TW.ts
resources/icons/: icon.icns  osx_icon_make.sh
resources/ssl/: win_dsa_pub.pem
src/: App.tsx  MainWindow.cpp  MainWindow.h  aboutdialog.h  aboutdialog.ui  caesium.cpp  caesium.h  caesium.ui  cimage.cpp  cimage.h  cimageinfo.cpp  cimageinfo.h  cjpeg.cpp  cjpeg.h  clist.cpp  cpng.cpp  cpng.h  ctreewidgetitem.h  exif.cpp  i18n.ts  jpeg.cpp  jpeg.h  main.cpp  main.tsx  networkoperations.cpp  networkoperations.h  png.cpp  png.h  preferencedialog.cpp  preferencedialog.h  preferencedialog.ui  types.ts  utils.cpp  utils.h
src/assets/css/: App.css
src/components/: AppMenu.tsx  CenterContainer.tsx  ErrorBoundary.tsx  FileListPagination.tsx  FileListTable.tsx  Footer.tsx  ListPanel.tsx  PreviewCanvas.tsx  PreviewPanel.tsx  Toolbar.tsx
src/components/dialogs/: AboutDialog.tsx  AskDialog.tsx  CheckForUpdatesDialog.tsx  ImportDialog.tsx  SettingsDialog.tsx  UsageStatsDialog.tsx
src/components/dialogs/settings/: AdvancedSettings.tsx  GeneralSettings.tsx  ImportSettings.tsx
src/components/side-panel/: CompressionOptions.tsx  OutputOptions.tsx  ResizeOptions.tsx  SidePanel.tsx
src/components/side-panel/compression-options/: JpegOptions.tsx  PngOptions.tsx  TiffOptions.tsx  WebpOptions.tsx
src/database/: Database.cpp  Database.h
src/delegates/: HtmlDelegate.cpp  HtmlDelegate.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  AdvancedImportDialog.cpp  AdvancedImportDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  UsageStatsDialog.cpp  UsageStatsDialog.h
src/exceptions/: ImageNotSupportedException.cpp  ImageNotSupportedException.h  ImageTooBigException.cpp  ImageTooBigException.h
src/filters/: QSliderScrollFilter.cpp  QSliderScrollFilter.h
src/i18n/: en-US.json  it-IT.json
src/include/: libcaesium.h
src/models/: CImage.cpp  CImage.h  CImageList.h  CImageSortFilterProxyModel.cpp  CImageSortFilterProxyModel.h  CImageTreeItem.cpp  CImageTreeItem.h  CImageTreeModel.cpp  CImageTreeModel.h
src/network/: NetworkOperations.cpp  NetworkOperations.h
src/services/: Importer.cpp  Importer.h
src/stores/: app.store.ts  compression-options.store.ts  file-list.store.ts  output-options.store.ts  preview.store.ts  resize-options.store.ts  settings.store.ts  ui.store.ts
src/updater/: AutoUpdater.h  CocoaInitializer.h  CocoaInitializer.mm
src/updater/osx/: AutoUpdater.cpp  CocoaInitializer.mm  SparkleAutoUpdater.h  SparkleAutoUpdater.mm
src/utils/: LanguageManager.cpp  LanguageManager.h  Logger.cpp  Logger.h  PostCompressionActions.cpp  PostCompressionActions.h  Updater.cpp  Updater.h  Utils.cpp  Utils.h  post-compression-actions.ts  utils.ts
src/widgets/: QCaesiumMessageBox.cpp  QCaesiumMessageBox.h  QCollapseToolButton.cpp  QCollapseToolButton.h  QDropListWidget.cpp  QDropListWidget.h  QDropTreeView.cpp  QDropTreeView.h  QLoadingLabel.cpp  QLoadingLabel.h  QMainCheckBox.cpp  QMainCheckBox.h  QTreeViewItemDelegate.cpp  QTreeViewItemDelegate.h  QZoomGraphicsView.cpp  QZoomGraphicsView.h
src/workers/: UTIF.js  image-loader.ts
tests/: CMakeLists.txt  CsTests.cpp  ImporterTests.cpp  ImporterTests.h  main.cpp
translations/: caesium_it_IT.qm  caesium_it_IT.ts
updater/: main.cpp  updater.cpp  updater.h  updater.pro  updater.ui
updater/src/: main.cpp  updater.cpp  updater.h
views/: AboutDialog.ui  AdvancedImportDialog.ui  MainWindow.ui  PreferencesDialog.ui  UsageStatsDialog.ui
